--- a/_posts/技术/2017-04-06-template.md
+++ b/_posts/技术/2017-04-06-template.md
@@ -162,11 +162,11 @@ PS：太懒，不想写测试用例，怎么简单怎么来
 
 写完之后启动项目，我将template的端口号配置为9096，所以访问localhost:9096/redis 如图：
 
-![Alt text](https://sarasxu.github.io/blog/img/template/1.png)
+![Alt text](https://sarasxu.github.io/winds/images/blog/template/1.png)
 
 然后再在新的标签页访问localhost:9096/get 如图：
 
-![Alt text](https://sarasxu.github.io/blog/img/template/2.png)
+![Alt text](https://sarasxu.github.io/winds/images/blog/template/2.png)
 
 这样基本上redis就完成了！
 
@@ -523,11 +523,11 @@ public class TestRabbitMQ {
 ```
 完成这些之后启动项目，访问localhost:9096/rabbitmq，如图：
 
-![Alt text](https://sarasxu.github.io/blog/img/template/3.png)
+![Alt text](https://sarasxu.github.io/winds/images/blog/template/3.png)
 
 同时在控制台可看见，如图：
 
-![Alt text](https://sarasxu.github.io/blog/img/template/4.png)
+![Alt text](https://sarasxu.github.io/winds/images/blog/template/4.png)
 
 这样rabbitMQ就配置和测试基本完成，不过一个消息可能有多个消费者，所以再在template2项目中，创建RedisTemplateConfig.java，内容如上。
 然后创建User.java，内容同样如上
@@ -578,7 +578,7 @@ exchange的value和template项目中的一样
 
 这样在template2的控制台可见：
 
-![Alt text](https://sarasxu.github.io/blog/img/template/5.png)
+![Alt text](https://sarasxu.github.io/winds/images/blog/template/5.png)
 
 到目前为止rabbitMQ的配置和应用测试全部完成
 
@@ -838,11 +838,11 @@ public class TestController {
 
 再启动template和template2，template2端口号为9095，所以访问localhost:9095/dubbo，如图所见：
 
-![Alt text](https://sarasxu.github.io/blog/img/template/6.png)
+![Alt text](https://sarasxu.github.io/winds/images/blog/template/6.png)
 
 同时在template控制台可见：
 
-![Alt text](https://sarasxu.github.io/blog/img/template/7.png)
+![Alt text](https://sarasxu.github.io/winds/images/blog/template/7.png)
 
 dubbo+zookeeper的配置和测试基本完成，系统间的交互也完成
 
@@ -1123,15 +1123,15 @@ public class TestAyncImpl implements TestNotifyFacade {
 
 重启template和template2，访问localhost:9095/dubboAync 可如图所见：
 
-![Alt text](https://sarasxu.github.io/blog/img/template/8.png)
+![Alt text](https://sarasxu.github.io/winds/images/blog/template/8.png)
 
 在template控制台可见：
 
-![Alt text](https://sarasxu.github.io/blog/img/template/9.png)
+![Alt text](https://sarasxu.github.io/winds/images/blog/template/9.png)
 
 在template2控制台可见：
 
-![Alt text](https://sarasxu.github.io/blog/img/template/10.png)
+![Alt text](https://sarasxu.github.io/winds/images/blog/template/10.png)
 
 这个机制可以在template2请求template时，template对于这个请求的处理可能会存在后续的变化，那么可以将group和version保存下来，等到template处理完成之后，再去告知template2这个请求的后续处理结果，达到异步的机制。因为懒，所以就做了看似同步的处理，其实可以用redis保存group和version，再去执行异步通知。
 
