润色大连游记

--- a/_posts/游记/2017-11-04-dalian.md
+++ b/_posts/游记/2017-11-04-dalian.md
@@ -50,7 +50,7 @@ tags:
 * 第四天，照例的早起和打瞌睡。这一天同样游玩了相当多的景点，毛主席像章馆、蝴蝶标本馆、蜡像馆等等，我和老乡拍了很多照片。如学着毛主席指点江山、和周总理握手、和几个大元帅的合影等，还拍下了许多的蝴蝶标本照片。
 * 下午，导游带我们去了金沙滩，那里环境真的很棒，空气也很好。导游带我们参观魔鬼十八盘等景点后，就是自由活动了。
 * 那天天气不错，有点凉风，也许靠近海边，有一股淡淡的咸腥味。我和老乡就在这个度假村慢慢悠悠的到处走走，拍拍照。
-* 就这样一直走着走着，就走到山顶了，这时候太阳已经慢慢下山了。到山顶的一个观望台，看见了大海。迎面吹着海风，看着远处的大海，海面上有一艘快艇在飞驰，带起海面上褶皱的波纹，再远处就是非常辽阔的海面，看不到尽头，感觉真的意义上看到了大海。也许那时候心情就如许巍《曾经得你》里面唱的，好男儿胸怀像大海，突然就张开双臂拥抱大海，让老乡给我照上几张。就这样我们待在那里边看海边聊天，直到导游规定的自由时间结束才离开。
+* 就这样一直走着走着，就走到山顶了，这时候太阳已经慢慢下山了。到山顶的一个观望台，看见了大海。迎面吹着海风，看着远处的大海，海面上有一艘快艇在飞驰，带起海面上褶皱的波纹，再远处就是非常辽阔的海面，看不到尽头，感觉真的意义上看到了大海。也许那时候心情就如许巍《曾经的你》里面唱的，好男儿胸怀像大海，突然就张开双臂拥抱大海，让老乡给我照上几张。就这样我们待在那里边看海边聊天，直到导游规定的自由时间结束才离开。
 * 晚上，旅程最后一个景点，去了极地海洋世界。里面有千奇百怪的海洋生物，我和老乡走走停停，又是一大波照片收入囊中。印象中里面的北极狐非常可爱，缩成一团貌似在冬眠？企鹅就是在那里缩着脖子站着，也是一动不动。
 
 ![Alt text](https://sarasxu.github.io/winds/images/blog/dalian/jinshatan.jpeg)
