上传夜爬泰山

--- a/_posts/游记/2017-11-05-taishan.md
+++ b/_posts/游记/2017-11-05-taishan.md
@@ -1,7 +1,7 @@
 ---
 layout: blog
 road: true
-title:  "我的游记不一样之夜爬泰山"
+title:  "我的游记不一样之夜登泰山"
 background: blue
 background-image: https://sarasxu.github.io/winds/images/icon/wuyueduzun.jpeg
 date:   2017-11-05 16:26:29
@@ -13,7 +13,7 @@ tags:
 - 朋友
 ---
 
-# 我的游记不一样之夜爬泰山
+# 我的游记不一样之夜登泰山
 
 ![Alt text](https://sarasxu.github.io/winds/images/blog/taishan/taishan.jpeg)
 
